[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Options.gd" type="Script" id=1]
[ext_resource path="res://Assets/Backgrounds/TetrisBackground.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/label_font_theme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/UI/shape_color_button.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/back_image.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sounds/LineBreak.wav" type="AudioStream" id=6]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 140.0
margin_top = 130.0
margin_right = 540.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 400.0
margin_bottom = 636.0

[node name="MusicLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 85.0
theme = ExtResource( 3 )
text = "Music"

[node name="SFXLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 400.0
margin_bottom = 174.0
theme = ExtResource( 3 )
text = "SFX"

[node name="FullscreenLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 178.0
margin_right = 400.0
margin_bottom = 263.0
theme = ExtResource( 3 )
text = "Fullscreen"

[node name="ShowGridLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 267.0
margin_right = 400.0
margin_bottom = 352.0
theme = ExtResource( 3 )
text = "Show Grid"

[node name="ShapeColorButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 356.0
margin_right = 400.0
margin_bottom = 494.0
texture_normal = ExtResource( 4 )

[node name="BackButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 498.0
margin_right = 400.0
margin_bottom = 636.0
texture_normal = ExtResource( 5 )

[node name="MusicSlider" type="HSlider" parent="."]
margin_left = 300.0
margin_top = 156.0
margin_right = 420.0
margin_bottom = 172.0
rect_min_size = Vector2( 120, 16 )
rect_scale = Vector2( 2, 2 )
min_value = -40.0
max_value = 5.0
value = -10.0
ticks_on_borders = true

[node name="SFXSlider" type="HSlider" parent="."]
margin_left = 300.0
margin_top = 245.0
margin_right = 420.0
margin_bottom = 261.0
rect_min_size = Vector2( 120, 16 )
rect_scale = Vector2( 2, 2 )
min_value = -50.0
max_value = -5.0
value = -20.0
ticks_on_borders = true

[node name="FullscreenCheck" type="CheckBox" parent="."]
margin_left = 499.0
margin_top = 325.0
margin_right = 523.0
margin_bottom = 349.0
rect_scale = Vector2( 2.2, 2.2 )

[node name="ShowGridCheck" type="CheckBox" parent="."]
margin_left = 499.0
margin_top = 413.0
margin_right = 523.0
margin_bottom = 437.0
rect_scale = Vector2( 2.2, 2.2 )
pressed = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/ShapeColorButton" to="." method="_on_ShapeColorButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="value_changed" from="MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="toggled" from="FullscreenCheck" to="." method="_on_FullscreenCheck_toggled"]
[connection signal="toggled" from="ShowGridCheck" to="." method="_on_ShowGridCheck_toggled"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
